src/objects/Pipeline_Review__mdt/Pipeline_Review__mdt.object-meta.xml
<CustomObject>
    <label>Pipeline Review</label>
    <pluralLabel>Pipeline Reviews</pluralLabel>
</CustomObject>