src/objects/Pipeline_Review__mdt/fields/Apex_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Apex_Unique_Identifier__c</fullName>
    <label>Apex Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>