src/objects/Pipeline_Review__mdt/fields/Fields_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Fields_API_Name__c</fullName>
    <label>Fields API Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>