src/objects/Pipeline_Review__mdt/fields/Is_Team_View__c.field-meta.xml
<CustomField>
    <fullName>Is_Team_View__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Team View?</label>
    <type>Checkbox</type>
</CustomField>