src/objects/Pipeline_Review__mdt/fields/Restrict_Records_to_Owner__c.field-meta.xml
<CustomField>
    <fullName>Restrict_Records_to_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restrict Records to Owner?</label>
    <type>Checkbox</type>
</CustomField>